erDiagram
    USERS ||--o{ COURSES : teaches
    USERS ||--o{ COURSE_ENROLLMENTS : enrolls
    USERS ||--o{ LECTURE_SESSIONS : conducts
    USERS ||--o{ ATTENDANCE_RECORDS : marks
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ ACHIEVEMENTS : earns
    USERS ||--o{ ATTENDANCE_EXCUSES : reviews

    COURSES ||--o{ COURSE_ENROLLMENTS : has
    COURSES ||--o{ LECTURE_SESSIONS : schedules
    COURSES ||--o{ ATTENDANCE_RECORDS : contains
    COURSES ||--o{ ACHIEVEMENTS : relates

    LECTURE_SESSIONS ||--o{ ATTENDANCE_RECORDS : records
    ATTENDANCE_RECORDS ||--o{ ATTENDANCE_EXCUSES : may_have

    USERS {
      uuid id PK
      text email
      text role
      text first_name
      text last_name
      text matric_number
      text staff_id
      jsonb face_descriptor
      timestamptz created_at
      timestamptz updated_at
    }

    COURSES {
      uuid id PK
      text code
      text title
      uuid lecturer_id FK
      text department
      text level
      text semester
      text academic_year
      timestamptz created_at
    }

    COURSE_ENROLLMENTS {
      uuid id PK
      uuid course_id FK
      uuid student_id FK
      timestamptz enrolled_at
      text status
      numeric attendance_percentage
    }

    LECTURE_SESSIONS {
      uuid id PK
      uuid course_id FK
      uuid lecturer_id FK
      date session_date
      time start_time
      text attendance_code
      text status
    }

    ATTENDANCE_RECORDS {
      uuid id PK
      uuid session_id FK
      uuid student_id FK
      uuid course_id FK
      text status
      timestamptz marked_at
      uuid marked_by FK
      text marking_method
    }

    NOTIFICATIONS {
      uuid id PK
      uuid user_id FK
      text type
      text title
      text message
      boolean is_read
    }

    ACHIEVEMENTS {
      uuid id PK
      uuid student_id FK
      uuid course_id FK
      text title
      text description
      timestamptz earned_at
    }

    ATTENDANCE_EXCUSES {
      uuid id PK
      uuid attendance_record_id FK
      uuid student_id FK
      text reason
      text status
      uuid reviewed_by FK
      timestamptz reviewed_at
    }
